Fix resolution issue, make food/snake bigger

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <body>
         <div id='keyContainer' style='width: 90%; height: 100px; margin: 0px auto; border: 1px solid gray; background-color: #eee;'>
         </div>
-        <canvas id='drawArea' style="width: 90%; height: 500px; margin: 0px auto; border: 1px solid gray; background-color: #F5F5F5;">
-        </canvas>
+        <div id='drawHolder' style='margin: 0px auto;'>
+            <canvas id='drawArea' height="500" width= "600" style="border: 1px solid gray; background-color: #F5F5F5;">
+            </canvas>
+        </div>
     </body>
 </html>
