Hide keyContainer, center game

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
         <script src='script.js' type='text/javascript'></script>
     </head>
     <body>
-        <div id='keyContainer' style='width: 90%; height: 100px; margin: 0px auto; border: 1px solid gray; background-color: #eee;'>
+        <div id='keyContainer' style='display:none; width: 90%; height: 100px; margin: 0px auto; border: 1px solid gray; background-color: #eee;'>
         </div>
-        <div id='drawHolder' style='margin: 0px auto;'>
-            <canvas id='drawArea' height="500" width= "600" style="border: 1px solid gray; background-color: #F5F5F5;">
+        <div id='drawHolder' style='width: 600px; margin: 0px auto;'>
+            <canvas id='drawArea' height="500" width="600" style="border: 1px solid gray; background-color: #F5F5F5;">
             </canvas>
         </div>
     </body>
