Add fps control + score + stats div

--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
             <canvas id='drawArea' height="500" width="600" style="border: 1px solid gray; background-color: #F5F5F5;">
             </canvas>
         </div>
+        <div id='stats' style='width: 600px; margin: 0px auto'>
+            Score: <span id='score'></span>
+            Length: <span id='length'></span>
+        </div>
     </body>
 </html>
