--- a/index.html
+++ b/index.html
@@ -14,5 +14,12 @@
             Score: <span id='score'></span>
             Length: <span id='length'></span>
         </div>
+        <div id='info' style='width: 600px; margin: 0px auto'>
+            P = Pause Game
+        </div>
+        <div id='paused' style='display: none; position: absolute; font-style: italic; z-index: 101; font-weight: bold'>
+            PAUSED
+        </div>
+        <div id='underlay' style='display: none; position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; z-index: 100; background-color: #000000; opacity: 0.1;'></div>
     </body>
 </html>
