--- a/index.html
+++ b/index.html
@@ -2,24 +2,24 @@
     <head>
         <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js' type='text/javascript'></script>
         <script src='script.js' type='text/javascript'></script>
+        <link rel='stylesheet' href='style.css'></link>
     </head>
     <body>
-        <div id='keyContainer' style='display:none; width: 90%; height: 100px; margin: 0px auto; border: 1px solid gray; background-color: #eee;'>
-        </div>
-        <div id='drawHolder' style='width: 600px; margin: 0px auto;'>
-            <canvas id='drawArea' height="500" width="600" style="border: 1px solid gray; background-color: #F5F5F5;">
+        <div id='keyContainer' class='centered grayBorder keyContainer'></div>
+        <div id='drawHolder' class='centered'>
+            <canvas id='drawArea' height="500" width="600" class='grayBorder drawArea'>
             </canvas>
         </div>
-        <div id='stats' style='width: 600px; margin: 0px auto'>
+        <div id='stats' class='centered'>
             Score: <span id='score'></span>
             Length: <span id='length'></span>
         </div>
-        <div id='info' style='width: 600px; margin: 0px auto'>
+        <div id='info' class='centered'>
             P = Pause Game
         </div>
-        <div id='paused' style='display: none; position: absolute; font-style: italic; z-index: 101; font-weight: bold'>
+        <div id='paused' class='paused' style='display: none;'>
             PAUSED
         </div>
-        <div id='underlay' style='display: none; position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; z-index: 100; background-color: #000000; opacity: 0.1;'></div>
+        <div id='underlay' class='underlay' style='display: none;'></div>
     </body>
 </html>
