--- a/client/index.html
+++ b/client/index.html
@@ -1,14 +1,22 @@
 <html>
     <head>
         <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js' type='text/javascript'></script>
-        <script src='script.js' type='text/javascript'></script>
+        <script type='text/javascript'>
+            jQuery.fn.center = function () {
+                this.css("position","absolute");
+                this.css("top", ( $(window).height() - this.height() ) / 2+$(window).scrollTop() - 100 + "px");
+                this.css("left", ( $(window).width() - this.width() ) / 2+$(window).scrollLeft() + "px");
+                return this;
+            }
+        </script>
+
+        <script src='client.js' type='text/javascript'></script>
+        <script src='botclient.js' type='text/javascript'></script>
         <link rel='stylesheet' href='style.css'></link>
     </head>
-    <body>
+    <body onLoad="botclient.renderTo('drawHolder'); botclient.ready();">
         <div id='keyContainer' class='centered grayBorder keyContainer'></div>
         <div id='drawHolder' class='centered'>
-            <canvas id='drawArea' height="500" width="600" class='grayBorder drawArea'>
-            </canvas>
         </div>
         <div id='stats' class='centered'>
             Score: <span id='score'></span>
