This is a combination of 7 commits. Working with all calculations through node.js
Adding in collision detection of other snakes

changed yellow color to orange

Regenerate food after it times out

remove unnecessary code

--- a/client/index.html
+++ b/client/index.html
@@ -11,10 +11,11 @@
         </script>
 
         <script src='client.js' type='text/javascript'></script>
-        <script src='botclient.js' type='text/javascript'></script>
+        <script src='snake.js' type='text/javascript'></script>
+        <script src='script.js' type='text/javascript'></script>
         <link rel='stylesheet' href='style.css'></link>
     </head>
-    <body onLoad="botclient.renderTo('drawHolder'); botclient.ready();">
+    <body onLoad="snake.renderTo('drawHolder'); snake.ready();">
         <div id='keyContainer' class='centered grayBorder keyContainer'></div>
         <div id='drawHolder' class='centered'>
         </div>
