--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js' type='text/javascript'></script>
+
         <script type='text/javascript'>
             jQuery.fn.center = function () {
                 this.css("position","absolute");
@@ -10,23 +11,23 @@
             }
         </script>
 
-        <script src='snake.js' type='text/javascript'></script>
-        <script src='script.js' type='text/javascript'></script>
+        <script src='manager.js' type='text/javascript'></script>
         <link rel='stylesheet' href='style.css'></link>
     </head>
-    <body onLoad="snake.renderTo('drawHolder'); snake.ready();">
+    <body onLoad="manager.renderTo('drawHolder'); ">
         <div id='keyContainer' class='centered grayBorder keyContainer'></div>
         <div id='drawHolder' class='centered'>
         </div>
-        <div id='stats' class='centered'>
-            Score: <span id='score'></span>
-            Length: <span id='length'></span>
+        <div id='stats' class='stats centered' style='display: none'>
+            <div id='players-wrap' class='players-wrap'>
+            </div>
         </div>
-        <div id='info' class='centered'>
-            P = Pause Game
-        </div>
-        <div id='paused' class='paused' style='display: none;'>
-            PAUSED
+        <div id='login-dialog' class='login-dialog' style='display: none;'>
+            <div class='username-wrap'>Username: <input id='username' class='username' /> </div>
+            <div class='button-wrap'>
+                <span id='watch-button' class='watch-button'>Watch</span>
+                <span id='play-button' class='play-button'>Play</span>
+            </div>
         </div>
         <div id='underlay' class='underlay' style='display: none;'></div>
     </body>
